# percolation

./: .clang-format  .gitignore  LICENSE  README.md  main.cpp  meson.build
include/: disjoint_set_forest.hpp  memory_mapped_vector.h  pcg_extras.hpp  power.h  timer.h  xorshift.h
src/analyse_data/: analyse_data.ipynb
src/analyse_data/data/p_244/: cubic_bond_percolation_p_0.2440000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2450000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2460000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2470000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2480000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2490000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2500000000_centre_64_size_512_num_10.csv  cubic_bond_percolation_p_0.2510000000_centre_64_size_512_num_10.csv
src/analyse_data/data/p_244_252/: cubic_bond_percolation_p_0.2440000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2450000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2460000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2470000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2480000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2490000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2500000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2510000000_centre_64_size_256_num_30.csv
src/analyse_data/data/p_244_test/: cubic_bond_percolation_p_0.2440000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2450000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2460000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2470000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2480000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2490000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2500000000_centre_64_size_256_num_30.csv  cubic_bond_percolation_p_0.2510000000_centre_64_size_256_num_30.csv
src/common/include/: colour_names.h  percolation.h
src/cubic_bond_percolation/: cubic_bond_percolation.cpp
src/cubic_bond_percolation/include/: cubic_bond_percolation.h
src/cubic_site_percolation/: cubic_site_percolation.cpp
src/cubic_site_percolation/include/: cubic_site_percolation.h
src/naive_approach/: main.cpp
(+127 files in other folders)
